[package]
name = "particle_physic_sim"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_flycam = "*"
bevy_stl = "*"
bevy_asset_loader = "*"
bevy-inspector-egui = "*"
rand = "0.8"
random_color = "0.6.1"
